plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'kn.org'
version = '0.0.1-SNAPSHOT'
description = 'delivery-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // Actuator: /actuator/health backs the container HEALTHCHECK and compose
    // `depends_on: condition: service_healthy` so dependants wait for readiness.
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    implementation 'io.minio:minio:8.5.12'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // WebSocket (STOMP)
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Security & OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Email (SMTP + Thymeleaf templates)
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // PDF invoices — renders XHTML/CSS to PDF (pure Java, via PDFBox).
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
    // Normalises Thymeleaf HTML output into strict XHTML the PDF renderer accepts.
    implementation 'org.jsoup:jsoup:1.17.2'

    // Redis (sessions, cache, rate limiting)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Custom JWT for customer auth (Spring-issued, separate from Keycloak)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Flyway schema migrations (Phase 3+)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Phase 7: production observability
    // Sentry — captures uncaught exceptions + slow transactions. DSN set via env.
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.18.1'
    implementation 'io.sentry:sentry-logback:7.18.1'
    // Structured JSON logs for log aggregators (Loki / ELK / Datadog).
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
